--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>ProfCorrector AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Polyfill for process.env to prevent crashes in browser environments
+      window.process = window.process || { env: {} };
+      
       tailwind.config = {
         theme: {
           extend: {
@@ -37,16 +40,43 @@
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "@google/genai": "https://esm.sh/@google/genai@^1.39.0"
+    "react": "https://esm.sh/react@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+    "@google/genai": "https://esm.sh/@google/genai@0.2.1"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 text-slate-900 font-sans antialiased">
-    <div id="root"></div>
+    <div id="root" class="flex items-center justify-center h-screen text-slate-500">
+        <div class="text-center">
+            <svg class="animate-spin h-8 w-8 text-blue-600 mx-auto mb-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+            </svg>
+            <p>Carregando ProfCorrector...</p>
+        </div>
+    </div>
+    <script type="module" src="./index.tsx"></script>
+    <script>
+      window.onerror = function(message, source, lineno, colno, error) {
+        console.error("Erro Global:", error);
+        // Only show alert if it's not a harmless resize observer error
+        if (!message.includes('ResizeObserver')) {
+            const root = document.getElementById('root');
+            if (root) {
+                root.innerHTML = `<div style="color:red; padding:20px; text-align:center;">
+                    <h3>Erro ao carregar aplicação</h3>
+                    <p>${message}</p>
+                    <p style="font-size:12px; color:#666;">Verifique o console para mais detalhes.</p>
+                </div>`;
+            }
+        }
+      };
+    </script>
   </body>
 </html>
